--- a/components/UI/Modal/Modal.module.css
+++ b/components/UI/Modal/Modal.module.css
@@ -8,18 +8,23 @@
     height: 48px;
     border-radius: 100px;
     position: absolute;
-    top: 3px;
-    right: 4px;
+    top: 4px;
+    right: 0;
     z-index: 1;
-    transition: all .15s ease-out;
+    transition: .15s ease;
     line-height: 1;
     cursor: pointer;
     color: #fff;
 }
 
-.close:hover {
-    background-color: #000;
-    transform: scale(1.3);
+@media (hover) {
+    .close:hover {
+        background-color: #111725;
+    }
+}
+
+.close:active {
+    background-color: #06080d;
 }
 
 .react-modal-sheet-backdrop {
@@ -39,22 +44,9 @@
 }
 
 .react-modal-sheet-header,
-/*.react-modal-sheet-container,*/
 .react-modal-sheet-content {
     border-radius: 10px 10px 0 0 !important;
 }
-
-
-/*.react-modal-sheet-container {*/
-/*    width: 400px !important;*/
-/*    max-height: calc(90vh - 2vw) !important;*/
-/*    height: max-content !important;*/
-/*    overflow-y: auto;*/
-/*    overflow-x: hidden;*/
-/*    right: 8px !important;*/
-/*    left: auto !important;*/
-/*    top: 8px !important;*/
-/*}*/
 
 .react-modal-sheet-content {
     overflow: initial !important;
